Opened 12 years ago

Closed 12 years ago

#4130 closed defect (fixed)

error: 'char* dup_wchar_to_utf8(wchar_t*)' was declared 'extern' and later 'static'

Reported by: Kyle Owned by:
Priority: important Component: avdevice
Version: git-master Keywords: decklink regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Cross-compiling FFmpeg on Debian for Windows with MinGW-w64 fails if --enable-decklink is included. The DeckLink SDK Version used was 10.3.1.

The error message:

/home/kyle/software/ffmpeg/source/ffmpeg-git/libavdevice/decklink_common.cpp: In function 'char* dup_wchar_to_utf8(wchar_t*)':
/home/kyle/software/ffmpeg/source/ffmpeg-git/libavdevice/decklink_common.cpp:61:42: error: 'char* dup_wchar_to_utf8(wchar_t*)' was declared 'extern' and later 'static' [-fpermissive]
 static char *dup_wchar_to_utf8(wchar_t *w)
                                          ^

Attachments (1)

patchdecklink.diff (464 bytes ) - added by Carl Eugen Hoyos 12 years ago.

Download all attachments as: .zip

Change History (4)

by Carl Eugen Hoyos, 12 years ago

Attachment: patchdecklink.diff added

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: regression added

Does the attached patch help?

comment:2 by Kyle, 12 years ago

The patchdecklink.diff fixed this issue.

comment:3 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: newclosed

The patch was applied as 1f3d4788983d929d76e1d168bec7db1c80a50be5
Thank you for testing.

Note: See TracTickets for help on using tickets.